syntax = "proto3";

option csharp_namespace = "QuizProto";

package quiz;

service Quiz {
	rpc GetQuestion (GetQuestionRequest) returns (GetQuestionReply);
	rpc SubmitAnswers (SubmitAnswersRequest) returns (SubmitAnswersReply);
}

message GetQuestionRequest{
	int32 questionNumber = 1;
}

message GetQuestionReply{
	Question question = 1;
}

message SubmitAnswersRequest {
	Question question = 1;
	repeated Answer answers = 2;
}

message SubmitAnswersReply {
	int32 points = 1;
}

message Question {
	int32 id = 1;
	string content = 2;
}

message Answer {
	int32 id = 1;
	string content = 2;
}